--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
