--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "gh-pages": "4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
