--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "typescript": "^4.8.4",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
-    "gh-pages": "4.0.0"
+    "gh-pages": "4.0.0",
+    "clsx": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,7 +54,15 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-config-react": "^1.1.7",
-    "eslint-config-react-app": "^7.0.1"
+    "eslint-config-react-app": "^7.0.1",
+    "sass": "^1.69.5"
   }
 }
